--- a/webpage/test/style.css
+++ b/webpage/test/style.css
@@ -18,44 +18,79 @@ body,html {
 	background-color: #FFF;
 }
 header {
-    background: #544CC9;
-    border-radius: 0px,0px,50px,50px;
+    background: #AEC6CF;
     padding: 20px 30px;
+    max-width: 940px;
     margin: auto;
-    box-shadow: 10px 20px 20px #000000;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-    
 }
 nav {
     display: inline-block;
-    text-align: center;
 }
 nav ul li a {
-    
+    background: #EEE;
     padding: 2px 10px;
     font-size: 20px;
     text-decoration: none;
     font-weight: bold;
-    color: #FFFFFF;
-    
+    color: #444;
+    border-radius: 10px;
 }
 nav ul li a:hover {
-	
-    text-decoration: wavy overline lime
-    
+	background: #FFF;
 }
 nav ul li {
     display: inline-block;
     margin: 10px;
-    
 }
 nav ul {
     list-style: none;
-    
 }
-
-
-
+#pageContent {
+    max-width: 1000px;
+    margin: auto;
+    border: none;
+}
+main {
+	float: left;
+	width: 60%;
+}
+aside {
+	float: right;
+	width: 30%;
+}
+article {
+    border-bottom: 2px dotted #999;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+article h2 {
+    font-weight: normal;
+    margin-bottom: 12px;
+}
+article p {
+	
+}
+main section {
+	
+}
+footer {
+	background: #AEC6CF;
+	max-width: 1000px;
+	margin: auto;
+	clear: both;
+	text-align: right;
+}
+footer p {
+	padding: 20px;
+}
+address {
+    padding: 10px 20px 30px 10px;
+}
+aside > div {
+	margin: 10px auto;
+	background: #AEC6CF;
+	min-height: 100px;
+}
 #logo {
     display: inline-block;
     vertical-align: middle;
@@ -68,22 +103,27 @@ nav ul {
     vertical-align: middle;
     margin-right: 10px;
 }
-
-#subheader{
-    background-color: #BEBEC2;
-    border-radius: 0px 0px 15px 5px;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    
-    
+body > section {
+    max-width: 1000px;
+    margin: auto;
+    padding: 30px 0px;
+    border-bottom: 1px solid #999;
+    color: #333;
 }
 
-#subheader li{
-    padding: 0px 50px;
-    
+@media screen and (max-width: 1000px) {
+	body > section {
+		padding: 30px 20px;
+	}
 }
+@media screen and (max-width: 600px) {
+	main {
+		float: none;
+		width: 100%;
+	}
+	aside {
+		float: none;
+		width: 100%;
+	}
 
-#subheader nav ul li a{
-    color: #403E3E;
 }
