--- a/webpage/css/style_who_are_we.css
+++ b/webpage/css/style_who_are_we.css
@@ -110,26 +110,18 @@ nav ul {
     color: #272765;
 }
 
-#homecontent{
-    margin-top: 200px;
+#top{
+    margin-top: 100px;
 }
 
-#homecontent h1{
+#top h1{
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     margin-left: 3%;
     font-size: 58px;
     color: #544CC9;
 }
-
-#homecontent h2{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    margin-left: 34%;
-    font-size: 48px;
-    color: #272765;
-}
-#homecontent h3{
+#top h3{
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     margin-left: 3%;
@@ -141,40 +133,77 @@ nav ul {
     
 }
 
-.btn{
-    box-shadow: 5px 5px 24px rgba(0, 0, 0, 0.12);
-    margin-left: 35%;
-    margin-top: 2%;
-    
-    border-radius: 12px;
-    border-color: #544CC9;
-    background-color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-width: 1px;
-    
-    padding: 8px 50px;
-}
-
-.btn :hover{
-    border-color: aqua;
-    border-radius: 12px;
-}
-
-.btn a{
-    text-decoration: none;
-    font-size: 30px;
-    font-weight: 200;
-    color: #544CC9;
-}
-
-.btn a:hover{
-    border-color: aqua;
-}
-
-#img{
-    
+.sideImage {
+    width: 40%;
+    height: auto;
     float: right;
-    margin-top: -5%;
+    text-align: right;
+    margin-top: -10%;;
+}
+
+/* Resize images */
+.sideImage img {
+    width: 100%;
+    height: auto;
+    
+}
+
+.card{
+    border-radius: 20px;
+    width: 10%;
+    height: 18%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    padding-top: 1%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: none;
+    
+
+}
+.card:hover{
+    box-shadow: 0px 9px px rgba(0, 0, 0, 0.16);
+}
+.card .profilepic{
+    float: left;
+}
+.card h1{
+    color: #544CC9;
+    font-weight: 800;
+    text-align: left;
+    font-size: 26px;
+    
+}
+
+.card h2{
+    color: #272765;
+    font-weight: 400;
+    text-align: right;
+    margin-right: 7%;
+    font-size: 17px;
+}
+.card h3{
+    font-weight: 200;
+    font-size: 12px;
+    margin-top: 10%;
+    text-align: justify;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+.card .linkedin{
+    margin-top: 5%;
+    display: inline-block;
+    margin-left: 5%;
+}
+.card .github{
+    margin-top: 5%;
+    display: inline-block;
+}
+
+.card .github img{
+    width: 35px;
+    height: auto;
+}
+.card .linkedin img{
+    width: 35px;
+    height: auto;
 }
