--- a/webpage/css/style_who_are_we.css
+++ b/webpage/css/style_who_are_we.css
@@ -93,10 +93,11 @@ nav ul {
     
 }
 #subheader nav{
-    margin-left: 10px;
+    margin-left: -2%;
 }
 #subheader li{
-    padding: 0px 50px;
+    padding: 0px 60px;
+    color: #272765;
     
 }
 
@@ -150,13 +151,14 @@ nav ul {
 
 .card{
     border-radius: 20px;
-    width: 10%;
-    height: 18%;
+    width: 12%;
+    height: 19%;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     padding-top: 1%;
     margin-left: 3%;
     margin-top: 3%;
     border: none;
+    float: left;
     
 
 }
@@ -169,8 +171,9 @@ nav ul {
 .card h1{
     color: #544CC9;
     font-weight: 800;
-    text-align: left;
+    text-align: right;
     font-size: 26px;
+    margin-right: 7%;
     
 }
 
@@ -180,6 +183,7 @@ nav ul {
     text-align: right;
     margin-right: 7%;
     font-size: 17px;
+    padding-bottom: 2%;
 }
 .card h3{
     font-weight: 200;
@@ -192,18 +196,24 @@ nav ul {
 .card .linkedin{
     margin-top: 5%;
     display: inline-block;
-    margin-left: 5%;
+    margin-left: 35%;
 }
 .card .github{
     margin-top: 5%;
     display: inline-block;
+    text-align: center;
+
 }
 
 .card .github img{
     width: 35px;
     height: auto;
+    padding-bottom: 2%;
+    
 }
 .card .linkedin img{
     width: 35px;
     height: auto;
+    padding-bottom: 2%;
+    
 }
