--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,8 +10,8 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="static/style_contact.css">
-	<link rel="icon" href="static/Images/logo.png">
+	<link rel="stylesheet" href="../static/style_contact.css">
+	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
 
@@ -21,8 +21,8 @@
 			<a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="/">Home</a>
-						<li><a href="rien">Exercises</a>
+						<li><a href="index.html">Home</a>
+						<li><a href="exercises.html">Exercises</a>
 						<li><a href="rien">Tutorials</a>
 						<li><a href="rien">Create</a>
 					</ul>
@@ -32,7 +32,7 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="who_are_we">Who are we?</a>
+				<li><a href="who_are_we.html">Who are we?</a>
 				<li>Contact
 				<li><a href="rien">About</a>
 			</ul>
@@ -42,48 +42,10 @@
 	<div id="top">
 		<h1>CONTACT.</h1>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
+		<div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
-	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
-		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
-		
-	</div>
 
-	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
-		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
-		
-	</div>
-
-	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
-		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
-		
-	</div>
-
-	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
-		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
-		
-	</div>
 	
 </body>
 </html>
