--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="static/style.css">
-	<link rel="icon" href="static/Images/logo.png">
+	<link rel="stylesheet" href="../static/style.css">
+	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
 
@@ -22,7 +22,7 @@
 				<nav>  
 					<ul>
 						<li>Home
-						<li><a href="rien">Exercises</a>
+						<li><a href="exercises.html">Exercises</a>
 						<li><a href="rien">Tutorials</a>
 						<li><a href="rien">Create</a>
 					</ul>
@@ -33,8 +33,8 @@
 		<nav>  
 			<ul>
 				<li>Home
-				<li><a href="who_are_we">Who are we</a>
-				<li><a href="contact">Contact</a>
+				<li><a href="who_are_we.html">Who are we</a>
+				<li><a href="contact.html">Contact</a>
 				<li><a href="rien">About</a>
 			</ul>
 		</nav>
@@ -42,7 +42,7 @@
 
 	<div id="homecontent">
 		<h1>FINITE STATE AUTOMATA.</h1>
-		<div id="img"><img src="static/Images/undraw_Mind_map_re_nlb6.png"></div>
+		<div id="img"><img src="../static/Images/undraw_Mind_map_re_nlb6.png"></div>
 		<h2>Exercises</h2>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
 		
