--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -1,122 +1,122 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Automata Exercises</title>
+    <head>
+        <meta charset="utf-8">
+        <title>Automata Exercises</title>
 
-	<meta name="Intuitive exercises for finite state automata and regular languages" content="ntuitive exercises for finite state automata and regular languages">
-	<meta name="UCL Computer Science grp. 31" content="Automata Exercises">
+        <meta name="Intuitive exercises for finite state automata and regular languages" content="ntuitive exercises for finite state automata and regular languages">
+        <meta name="UCL Computer Science grp. 31" content="Automata Exercises">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="../static/style_exercises.css">
-	<link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Archivo:700&display=swap" rel="stylesheet">
-	<link rel="icon" href="Images/logo.png">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="../static/style_exercises.css">
+        <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Archivo:700&display=swap" rel="stylesheet">
+        <link rel="icon" href="Images/logo.png">
 
-</head>
+    </head>
 
-<body>
-	<div id="test">
-		<header>
-			<a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
-				<nav>  
-					<ul>
-						<li><a href="index.html">Home</a>
-						<li>Exercises
-						<li><a href="rien">Tutorials</a>
-						<li><a href="rien">Create</a>
-					</ul>
-				</nav>
-		</header>
-	</div>
-	<div id="subheader">
-		<nav>  
-			<ul>
-				<li><a href="who_are_we.html">Who are we?</a>
-				<li><a href="contact.html">Contact</a>
-				<li><a href="rien">About</a>
-			</ul>
-		</nav>
-	</div>
+    <body>
+        <div id="test">
+            <header>
+                <a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+                    <nav>  
+                        <ul>
+                            <li><a href="index.html">Home</a>
+                            <li>Exercises
+                            <li><a href="rien">Tutorials</a>
+                            <li><a href="rien">Create</a>
+                        </ul>
+                    </nav>
+            </header>
+        </div>
+        <div id="subheader">
+            <nav>  
+                <ul>
+                    <li><a href="who_are_we.html">Who are we?</a>
+                    <li><a href="contact.html">Contact</a>
+                    <li><a href="rien">About</a>
+                </ul>
+            </nav>
+        </div>
 
-	<div id="top">
-		<h1>EXERCISES.</h1>
-		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		
-	</div>
-    <div class="middlecontent">
-        <table class="styled-table">
-            <thead>
-                <tr>
-                    <th>Type</th>
-                    <th>Name</th>
-                    <th>Difficulty(%)</th>
-                    <th>Creation date</th>
-                    
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                    
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <tr class="active-row">
-                    <td>NFA -> REGEX</td>
-                    <td>Easy exercise for REGEX conversion.</td>
-                    <td>30</td>
-                    <td>2021-03-16</td>
-                </tr>
-                <!-- and so on... -->
-            </tbody>
-        </table>
-        
-    </div>
-</body>
-	
+        <div id="top">
+            <h1>EXERCISES.</h1>
+            <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
+            
+        </div>
+        <div class="middlecontent">
+            <table class="styled-table">
+                <thead>
+                    <tr>
+                        <th>Type</th>
+                        <th>Name</th>
+                        <th>Difficulty(%)</th>
+                        <th>Creation date</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                        
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <tr class="active-row">
+                        <td>NFA -> REGEX</td>
+                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>30</td>
+                        <td>2021-03-16</td>
+                    </tr>
+                    <!-- and so on... -->
+                </tbody>
+            </table>
+            
+        </div>
+    </body>
+</html>	
