Added exercise, create page

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,13 @@
 <body>
 	<div id="test">
 		<header>
-			<a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
+			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
 						<li>Home
 						<li><a href="exercises.html">Exercises</a>
-						<li><a href="rien">Tutorials</a>
-						<li><a href="rien">Create</a>
+						<li><a href="generator.html">Generator</a>
+						<li><a href="create.html">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -32,10 +32,9 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li>Home
 				<li><a href="who_are_we.html">Who are we</a>
 				<li><a href="contact.html">Contact</a>
-				<li><a href="rien">About</a>
+					<li><a href="about.html">About</a>
 			</ul>
 		</nav>
 	</div>
@@ -46,7 +45,7 @@
 		<h2>Exercises</h2>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
 		
-		<button class="btn home"><a href="rien">Let's go!</a></button>
+		<button class="btn home"><a href="exercises.html">Let's go!</a></button>
 	
 	</div>
 	
