--- a/templates/sample_exercise_page.html
+++ b/templates/sample_exercise_page.html
@@ -19,13 +19,13 @@
 	<div id="test">
 		<header>
             
-			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+			<a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
 						<li><a href="index.html">Home</a>
 						<li><a href="exercises.html">Exercises</a>
-						<li><a href="rien">Tutorials</a>
-						<li><a href="rien">Create</a>
+						<li><a href="generator.html">Generator</a>
+						<li><a href="create.html">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -35,7 +35,7 @@
 			<ul>
 				<li><a href="who_are_we.html">Who are we?</a>
 				<li><a href="contact.html">Contact</a>
-				<li><a href="rien">About</a>
+				<li><a href="about.html">About</a>
 			</ul>
 		</nav>
 	</div>
@@ -49,9 +49,9 @@
     <div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
     <div class="answerinput">
         <h1>Your answer:</h1>
-        
         <input type="text" class="inp">
     </div>
+	<button class="btn home"><a href="rien">  Submit  </a></button>
 	
 </body>
 </html>
