--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -23,8 +23,8 @@
 					<ul>
 						<li><a href="index.html">Home</a>
 						<li><a href="exercises.html">Exercises</a>
-						<li><a href="rien">Tutorials</a>
-						<li><a href="rien">Create</a>
+						<li><a href="generator.html">Generator</a>
+						<li><a href="create.html">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -34,7 +34,7 @@
 			<ul>
 				<li>Who are we
 				<li><a href="contact.html">Contact</a>
-				<li><a href="rien">About</a>
+				<li><a href="about.html">About</a>
 			</ul>
 		</nav>
 	</div>
