--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="../static/style_contact.css">
+	<link rel="stylesheet" href="../static/style_about.css">
 	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
@@ -18,7 +18,7 @@
 <body>
 	<div id="test">
 		<header>
-			<a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
 						<li><a href="index.html">Home</a>
@@ -33,16 +33,16 @@
 		<nav>  
 			<ul>
 				<li><a href="who_are_we.html">Who are we?</a>
-				<li>Contact
-				<li><a href="about.html">About</a>
+				<li><a href="contact.html">Contact</a>
+				<li>About
 			</ul>
 		</nav>
 	</div>
 
 	<div id="top">
-		<h1>CONTACT.</h1>
+		<h1>ABOUT.</h1>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		<div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
+		<div class="sideImage"><img src="../static/Images/undraw_about_me_wa29.png"></div>
 	</div>
 
 
