--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -25,8 +25,8 @@
                         <ul>
                             <li><a href="index.html">Home</a>
                             <li>Exercises
-                            <li><a href="rien">Tutorials</a>
-                            <li><a href="rien">Create</a>
+                            <li><a href="generator.html">Generator</a>
+                            <li><a href="create.html">Create</a>
                         </ul>
                     </nav>
             </header>
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="who_are_we.html">Who are we?</a>
                     <li><a href="contact.html">Contact</a>
-                    <li><a href="rien">About</a>
+                    <li><a href="about.html">About</a>
                 </ul>
             </nav>
         </div>
@@ -65,9 +65,9 @@
                         <td>2021-03-16</td>
                         
                     </tr>
-                    <tr class="active-row">
+                    <tr class="active-row" onclick="window.location='sample_exercise_page.html';">
                         <td>NFA -> REGEX</td>
-                        <td>Easy exercise for REGEX conversion.</td>
+                        <td>Easy exercise for REGEI conversion.</td>
                         <td>30</td>
                         <td>2021-03-16</td>
                     </tr>
