--- a/static/style_about.css
+++ b/static/style_about.css
@@ -134,74 +134,85 @@ nav ul {
     
 }
 
+.sideImage {
+    width: 40%;
+    height: auto;
+    float: right;
+    text-align: right;
+    margin-top: -10%;;
+}
 
-.middlecontent{
-    margin: auto;
-    float: center;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 5%;
+/* Resize images */
+.sideImage img {
+    width: 100%;
+    height: auto;
     
 }
 
-.styled-table {
-    border-radius: 10px;
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 19px;
-    font-family: 'Montserrat', sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-.styled-table thead tr {
+.card{
+    border-radius: 20px;
+    width: 10%;
+    height: 19%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    padding-top: 1%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: none;
+    float: left;
     
-    background-color: #544CC9;;
-    color: #ffffff;
-    text-align: left;
-    font-weight:800;
+
 }
-
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
+.card:hover{
+    box-shadow: 0px 9px px rgba(0, 0, 0, 0.16);
 }
-
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+.card .profilepic{
+    float: left;
 }
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #544CC9;;
-}
-
-
-.styled-table tbody td:nth-child(2) {
-   padding-right: 105px;
-   margin-left: 105px;
-}
-.styled-table tbody td:nth-child(1) {
-    padding-right: 105px;
-    
- }
-
-.styled-table tbody tr.active-row {
-    font-weight: 300;
+.card h1{
     color: #544CC9;
-    cursor: pointer;
+    font-weight: 800;
+    text-align: left;
+    font-size: 26px;
+    
+}
+
+.card h2{
+    color: #272765;
+    font-weight: 400;
+    text-align: right;
+    margin-right: 7%;
+    font-size: 17px;
+    padding-bottom: 2%;
+}
+.card h3{
+    font-weight: 200;
+    font-size: 12px;
+    margin-top: 10%;
+    text-align: justify;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+.card .linkedin{
+    margin-top: 5%;
+    display: inline-block;
+    margin-left: 30%;
+}
+.card .github{
+    margin-top: 5%;
+    display: inline-block;
+    text-align: center;
 
 }
 
-.styled-table tbody tr.active-row:hover {
-    color: white;
-    background-color: #544CC9;
+.card .github img{
+    width: 35px;
+    height: auto;
+    padding-bottom: 2%;
+    
 }
- 
-
-
+.card .linkedin img{
+    width: 35px;
+    height: auto;
+    padding-bottom: 2%;
+    
+}
