--- a/static/style_generator.css
+++ b/static/style_generator.css
@@ -127,81 +127,102 @@ nav ul {
     font-weight: 300;
     margin-left: 3%;
     font-size: 19px;
-    margin-top: 4%;
+    
     padding-right: 54%;
     text-align: justify;
     letter-spacing: 0px;
     
 }
 
+.sideImage {
+    margin-top: -5%;
+    width: 40%;
+    height: auto;
+    float: right;
+    text-align: right;
+    /* margin-top: 0%; */
+}
 
-.middlecontent{
-    margin: auto;
-    float: center;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 5%;
+/* Resize images */
+.sideImage img {
+    width: 100%;
+    height: auto;
     
 }
 
-.styled-table {
+.answerinput{
+    margin-top: 7%;
+    margin-left: 3%;
+    margin-right: 75%;
     border-radius: 10px;
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 19px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+.answerinput h1{
+    padding-top: 3%;
+    padding-bottom: 3%;
+    background-color: #BEBEC2;
+    font-weight: 400;
     font-family: 'Montserrat', sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    margin-left: 10%;
-    margin-right: 10%;
+    border-radius: 10px 10px 0px 0px;
+    padding-left: 3%;
 }
-
-.styled-table thead tr {
+.answerinput .inp{
     
-    background-color: #544CC9;;
-    color: #ffffff;
-    text-align: left;
-    font-weight:800;
+    border:none;
+    border-bottom:thin solid ;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    margin-left: 3%;
 }
-
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
+.answerinput .inp:focus{
+    border:none;
+    outline: none;
+    border-bottom:thin solid #544CC9;
 }
-
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #544CC9;;
+input{
+    width: 93%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
-.styled-table tbody td:nth-child(2) {
-   padding-right: 105px;
-   margin-left: 105px;
-}
-.styled-table tbody td:nth-child(1) {
-    padding-right: 105px;
+.btn{
+    box-shadow: 5px 5px 24px rgba(0, 0, 0, 0.12);
+    margin-left: 3%;
+    margin-top: 7%;
     
- }
+    border-radius: 12px;
+    border-color: #544CC9;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-width: 1px;
+    
+    padding: 6px 70px;
+}
 
-.styled-table tbody tr.active-row {
-    font-weight: 300;
+.btn :hover{
+    border-color: aqua;
+    border-radius: 12px;
+}
+
+.btn a{
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: 200;
     color: #544CC9;
-    cursor: pointer;
-
 }
 
-.styled-table tbody tr.active-row:hover {
-    color: white;
-    background-color: #544CC9;
+.btn a:hover{
+    border-color: aqua;
 }
- 
 
-
+h4{
+    
+    margin-top: 8%;
+    margin-right: 15%;
+    text-align: right;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    text-decoration: underline;
+}
