--- a/static/style_contact.css
+++ b/static/style_contact.css
@@ -1,11 +1,5 @@
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
 
-
-
-
-
-
-
 body,html {
 	background-color: #FFF;
     
@@ -149,70 +143,29 @@ nav ul {
     
 }
 
-.card{
-    border-radius: 20px;
-    width: 10%;
-    height: 19%;
+.contactinfo{
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-    padding-top: 1%;
+    border-radius: 10px;
+    margin-right: 83%;
+    
     margin-left: 3%;
+    margin-top: 5%;
+}
+.contactinfo img{
+    float:left;
     margin-top: 3%;
-    border: none;
-    float: left;
-    
-
+    margin-left: 2%;
+    position: relative;
+    width: 15%;
 }
-.card:hover{
-    box-shadow: 0px 9px px rgba(0, 0, 0, 0.16);
-}
-.card .profilepic{
-    float: left;
-}
-.card h1{
-    color: #544CC9;
-    font-weight: 800;
-    text-align: left;
-    font-size: 26px;
-    
-}
-
-.card h2{
-    color: #272765;
+.contactinfo h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
     font-weight: 400;
-    text-align: right;
-    margin-right: 7%;
-    font-size: 17px;
-    padding-bottom: 2%;
+    padding-top: 6%;
+    margin-left: 22%;
+    padding-bottom: 6%;
 }
-.card h3{
-    font-weight: 200;
-    font-size: 12px;
-    margin-top: 10%;
-    text-align: justify;
-    margin-left: 7%;
-    margin-right: 7%;
-}
-.card .linkedin{
-    margin-top: 5%;
-    display: inline-block;
-    margin-left: 30%;
-}
-.card .github{
-    margin-top: 5%;
-    display: inline-block;
-    text-align: center;
-
-}
-
-.card .github img{
-    width: 35px;
-    height: auto;
-    padding-bottom: 2%;
-    
-}
-.card .linkedin img{
-    width: 35px;
-    height: auto;
-    padding-bottom: 2%;
-    
+.contactinfo:hover{
+    box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.16);
 }
