--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@
 	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
-
+<!--Change the href links to pages-->
 <body>
 	<div id="test">
 		<header>
@@ -45,7 +45,10 @@
 		<div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
-
+	<div class="contactinfo">
+		<img src="../static/Images/email_logo.png">
+		<h3>name@email.com</h3>
+	</div>
 	
 </body>
 </html>
