Added comments to make django integration easier

--- a/templates/create.html
+++ b/templates/create.html
@@ -14,7 +14,7 @@
 	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
-
+<!--Change the href links to pages-->
 <body>
 	<div id="test">
 		<header>
@@ -59,6 +59,7 @@
         <h1>REGEX:</h1>
         <input type="text" class="inp">
     </div>
+	<!-- Add the code to get the content from the fields when we submit-->
 	<button class="btn home"><a href="rien">  Publish  </a></button>
 	
 </body>
