--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -16,7 +16,7 @@
         <link rel="icon" href="Images/logo.png">
 
     </head>
-
+<!--Change the href links to pages-->
     <body>
         <div id="test">
             <header>
@@ -46,6 +46,8 @@
             <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
             
         </div>
+        <!-- Code to get table content from database-->
+        <!-- Also add links to exercise pages-->
         <div class="middlecontent">
             <table class="styled-table">
                 <thead>
