--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 	<link rel="icon" href="../static/Images/logo.png">
 
 </head>
-
+<!--Change the href links to pages-->
 <body>
 	<div id="test">
 		<header>
