Updated files to change them to django page links

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,10 +21,10 @@
 			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="index.html">Home</a>
-						<li><a href="exercises.html">Exercises</a>
-						<li><a href="generator.html">Generator</a>
-						<li><a href="create.html">Create</a>
+						<li><a href="index">Home</a>
+						<li><a href="exercises">Exercises</a>
+						<li><a href="generator">Generator</a>
+						<li><a href="create">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -32,8 +32,8 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="who_are_we.html">Who are we?</a>
-				<li><a href="contact.html">Contact</a>
+				<li><a href="who_are_we">Who are we?</a>
+				<li><a href="contact">Contact</a>
 				<li>About
 			</ul>
 		</nav>
