--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -20,13 +20,13 @@
     <body>
         <div id="test">
             <header>
-                <a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+                <a href="index"><div id="logo"><img src="../static/Images/logo.png"></div></a>
                     <nav>  
                         <ul>
-                            <li><a href="index.html">Home</a>
+                            <li><a href="index">Home</a>
                             <li>Exercises
-                            <li><a href="generator.html">Generator</a>
-                            <li><a href="create.html">Create</a>
+                            <li><a href="generator">Generator</a>
+                            <li><a href="create">Create</a>
                         </ul>
                     </nav>
             </header>
@@ -34,9 +34,9 @@
         <div id="subheader">
             <nav>  
                 <ul>
-                    <li><a href="who_are_we.html">Who are we?</a>
-                    <li><a href="contact.html">Contact</a>
-                    <li><a href="about.html">About</a>
+                    <li><a href="who_are_we">Who are we?</a>
+                    <li><a href="contact">Contact</a>
+                    <li><a href="about">About</a>
                 </ul>
             </nav>
         </div>
@@ -67,7 +67,7 @@
                         <td>2021-03-16</td>
                         
                     </tr>
-                    <tr class="active-row" onclick="window.location='sample_exercise_page.html';">
+                    <tr class="active-row" onclick="window.location='sample_exercise_page';">
                         <td>NFA -> REGEX</td>
                         <td>Easy exercise for REGEI conversion.</td>
                         <td>30</td>
