--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
 				<nav>  
 					<ul>
 						<li>Home
-						<li><a href="exercises.html">Exercises</a>
-						<li><a href="generator.html">Generator</a>
-						<li><a href="create.html">Create</a>
+						<li><a href="exercises">Exercises</a>
+						<li><a href="generator">Generator</a>
+						<li><a href="create">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -32,9 +32,9 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="who_are_we.html">Who are we</a>
-				<li><a href="contact.html">Contact</a>
-					<li><a href="about.html">About</a>
+				<li><a href="who_are_we">Who are we</a>
+				<li><a href="contact">Contact</a>
+					<li><a href="about">About</a>
 			</ul>
 		</nav>
 	</div>
@@ -45,7 +45,7 @@
 		<h2>Exercises</h2>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
 		
-		<button class="btn home"><a href="exercises.html">Let's go!</a></button>
+		<button class="btn home"><a href="exercises">Let's go!</a></button>
 	
 	</div>
 	
