--- a/templates/generator.html
+++ b/templates/generator.html
@@ -19,13 +19,13 @@
 	<div id="test">
 		<header>
             
-			<a href="index.html"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+			<a href="index"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="index.html">Home</a>
-						<li><a href="exercises.html">Exercises</a>
+						<li><a href="index">Home</a>
+						<li><a href="exercises">Exercises</a>
 						<li>Generator
-						<li><a href="create.html">Create</a>
+						<li><a href="create">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -34,9 +34,9 @@
 		<nav>  
 			<ul>
 				
-				<li><a href="who_are_we.html">Who are we?</a>
-				<li><a href="contact.html">Contact</a>
-				<li><a href="about.html">About</a>
+				<li><a href="who_are_we">Who are we?</a>
+				<li><a href="contact">Contact</a>
+				<li><a href="about">About</a>
 			</ul>
 		</nav>
 	</div>
