--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -21,10 +21,10 @@
 			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="index.html">Home</a>
-						<li><a href="exercises.html">Exercises</a>
-						<li><a href="generator.html">Generator</a>
-						<li><a href="create.html">Create</a>
+						<li><a href="index">Home</a>
+						<li><a href="exercises">Exercises</a>
+						<li><a href="generator">Generator</a>
+						<li><a href="create">Create</a>
 					</ul>
 				</nav>
 		</header>
@@ -33,8 +33,8 @@
 		<nav>  
 			<ul>
 				<li>Who are we
-				<li><a href="contact.html">Contact</a>
-				<li><a href="about.html">About</a>
+				<li><a href="contact">Contact</a>
+				<li><a href="about">About</a>
 			</ul>
 		</nav>
 	</div>
