Change create page to form

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -48,7 +48,7 @@
 	</div>
     <!-- Code to retrieve the image from the generated image-->
     <div class="sideImage"><img src={{image|default("static/Images/undraw_team_spirit_hrr4(2).png", true)}}></div>
-    <form actrion="" method="POST">
+    <form action="" method="POST">
 		<div class="answerinput">
 			<h1>Input a REGEX : </h1>
 			<input type="text" class="inp" name="regex">
