--- a/templates/generator.html
+++ b/templates/generator.html
@@ -55,7 +55,7 @@
 		</div>
 		<!--Code to do the actions when we hit submit-->
 
-		<input class="btn home" type="submit" value="Submit" />
+		<input class="btn_sub" type="submit" value="Submit" />
 		<!-- <button class="btn home"><a href="rien">  Submit  </a></button> -->
 	</form>
 	<h4> {{label|default("", true)}}</h4>
