--- a/static/style_generator.css
+++ b/static/style_generator.css
@@ -185,10 +185,11 @@ input{
 }
 
 
-.btn{
+.btn_sub{
     box-shadow: 5px 5px 24px rgba(0, 0, 0, 0.12);
     margin-left: 3%;
     margin-top: 7%;
+    width: 11%;
     
     border-radius: 12px;
     border-color: #544CC9;
@@ -201,19 +202,19 @@ input{
     padding: 6px 70px;
 }
 
-.btn :hover{
+.btn_sub :hover{
     border-color: aqua;
     border-radius: 12px;
 }
 
-.btn a{
+.btn_sub a{
     text-decoration: none;
     font-size: 24px;
     font-weight: 200;
     color: #544CC9;
 }
 
-.btn a:hover{
+.btn_sub a:hover{
     border-color: aqua;
 }
 
