--- a/templates/create.html
+++ b/templates/create.html
@@ -62,7 +62,7 @@
     </div>
 	<!-- Add the code to get the content from the fields when we submit-->
 
-	<input class="btn home" type="submit" value="Publish" />
+	<input class="btn_sub" type="submit" value="Publish" />
 	<!-- <button class="btn home"><a href="rien">  Publish  </a></button> -->
 	</form>
 	
