--- a/templates/exercise_template.html
+++ b/templates/exercise_template.html
@@ -53,7 +53,7 @@
             <h1>Your answer:</h1>
             <input type="text" class="inp", name="answer">
         </div>
-        <input class="btn home" type="submit" value="Submit" />
+        <input class="btn_sub" type="submit" value="Submit" />
         <!-- <button class="btn home"><a href="rien">  Submit  </a></button> -->
         <!-- Code to perform the operations on button click-->
     </form>
