--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -68,7 +68,7 @@
                         <td>{{item.date}}</td>
                     </tr>
                     {% endfor %}
-                    <tr class="active-row">
+                    <!-- <tr class="active-row">
                         <td>NFA -> REGEX</td>
                         <td>Easy exercise for REGEX conversion.</td>
                         <td>30</td>
@@ -122,7 +122,7 @@
                         <td>Easy exercise for REGEX conversion.</td>
                         <td>30</td>
                         <td>2021-03-16</td>
-                    </tr>
+                    </tr> -->
                     <!-- and so on... -->
                 </tbody>
             </table>
