--- a/static/style_who_are_we.css
+++ b/static/style_who_are_we.css
@@ -163,7 +163,7 @@ nav ul {
 
 }
 .card:hover{
-    box-shadow: 0px 9px px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 9px 16px rgba(0, 0, 0, 0.16);
 }
 .card .profilepic{
     float: left;
