Added links and names

--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -47,7 +47,7 @@
 
 	<div class="card">
 		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
+		<h1>Kerem Abdulkut</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
 		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
@@ -57,7 +57,7 @@
 
 	<div class="card">
 		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
+		<h1>Alexander Nathanail</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
 		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
@@ -67,7 +67,7 @@
 
 	<div class="card">
 		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>John Doe</h1>
+		<h1>Ofir <br> Francis</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
 		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
@@ -80,8 +80,8 @@
 		<h1>Vincent Lefeuve</h1>
 		<h2>Web dev.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
+		<a href="https://github.com/V1ncenttt"><div class="linkedin"><img src="static/Images/logo_linkedin.png"></div></a>
+		<a href="https://www.linkedin.com/in/vincent-lefeuve/"><div class="github"><img src="static/Images/logo_github.png"></div></a>
 		
 	</div>
 	
