Add exercise creation

--- a/templates/error.html
+++ b/templates/error.html
@@ -41,8 +41,8 @@
 
 	<div id="top">
 		<!-- Change content with error description-->
-		<h1>{ERROR MESSAGE}</h1>
-		<h3>{Simple error description}</h3>
+		<h1>{{code}}</h1>
+		<h3>{{error}}</h3>
 		<div class="sideImage"><img src="static/Images/undraw_bug_fixing_oc7a.png"></div>
 	</div>
 
