--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
 <body>
 	<div id="test">
 		<header>
+
 			<a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
@@ -32,9 +33,9 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="who_are_we">Who are we</a>
+				<li><a href="who_are_we">Who are we?</a>
 				<li><a href="contact">Contact</a>
-					<li><a href="about">About</a>
+				<li><a href="about">About</a>
 			</ul>
 		</nav>
 	</div>
