--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -67,11 +67,13 @@
 
 	<div class="card">
 		<div class="profilepic"><img src="static/Images/logo.png"></div>
-		<h1>Ofir <br> Francis</h1>
-		<h2>His role.</h2>
+
+		<!-- <div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div> -->
+		<h1 style="text-align: center;">Ofir Francis</h1>
+		<h2 style="text-align: center;">His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="static/Images/logo_github.png"></div>
+		<a href="https:www.linkedin.com/in/ofir-francis/"><div class="linkedin"><img src="static/Images/logo_linkedin.png"></div></a>
+		<a href="https://github.com/ofirfrancis"><div class="github"><img src="static/Images/logo_github.png"></div></a>
 		
 	</div>
 
