--- a/templates/false.html
+++ b/templates/false.html
@@ -10,10 +10,11 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="static/style_contact.css">
+	<link rel="stylesheet" href="static/style_error.css">
 	<link rel="icon" href="static/Images/logo.png">
 
 </head>
+
 <body>
 	<div id="test">
 		<header>
@@ -32,22 +33,20 @@
 		<nav>  
 			<ul>
 				<li><a href="who_are_we">Who are we?</a>
-				<li>Contact
+				<li><a href="contact">Contact</a>
 				<li><a href="about">About</a>
 			</ul>
 		</nav>
 	</div>
 
 	<div id="top">
-		<h1>CONTACT.</h1>
-		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
+		<h1>Your answer was incorrect</h1>
+		<h3>Please try again</h3>
+		<button class="btn home"><a href="exercise-{{exnum}}">Back to the exercise</a></button>
+		<div class="sideImage"><img src="static/Images/undraw_bug_fixing_oc7a.png"></div>
 	</div>
 
-	<div class="contactinfo">
-		<img src="static/Images/email_logo.png">
-		<h3>name@email.com</h3>
-	</div>
+
 	
 </body>
 </html>
