added images and details to website

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,7 +46,7 @@
 
 	<div class="contactinfo">
 		<img src="static/Images/email_logo.png">
-		<h3>name@email.com</h3>
+		<h3>vincent.lefeuve.20@ucl.ac.uk</h3>
 	</div>
 	
 </body>
