--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -44,9 +44,9 @@
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
+		<div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div>
 		<h1>Can Akbulut</h1>
-		<h2>His role.</h2>
+		<h2>Databases.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
 		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
 		<div class="github"><img src="static/Images/logo_github.png"></div>
@@ -54,21 +54,21 @@
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
+		<div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div>
 		<h1>Alexander Nathanail</h1>
-		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
+		<h2>Image gen.</h2>
+		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet</h3>
 		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
 		<div class="github"><img src="static/Images/logo_github.png"></div>
 		
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
+		
 
-		<!-- <div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div> -->
+		<div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div>
 		<h1>Ofir Francis</h1>
-		<h2>His role.</h2>
+		<h2>Flask dev.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet <br></h3>
 		<a href="https:www.linkedin.com/in/ofir-francis/"><div class="linkedin"><img src="static/Images/logo_linkedin.png"></div></a>
 		<a href="https://github.com/ofirfrancis"><div class="github"><img src="static/Images/logo_github.png"></div></a>
@@ -76,7 +76,7 @@
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="static/Images/logo.png"></div>
+		<div class="profilepic"><img src="static/Images/test3.png"></div>
 		<h1>Vincent Lefeuve</h1>
 		<h2>Web dev.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
