--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 		<h1>FINITE STATE AUTOMATA.</h1>
 		<div id="img"><img src="static/Images/undraw_Mind_map_re_nlb6.png"></div>
 		<h2>Exercises</h2>
-		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
+		<h3>Intuitive exercises for finite state automata and regular languages</h3>
 		
 		<button class="btn home"><a href="exercises">Let's go!</a></button>
 	
