--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -39,7 +39,7 @@
 	</div>
 	<div id="top">
 		<h1>WHO ARE WE?</h1>
-		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
+		<h3>We are a team of University College London computer science students. Here are our profiles.</h3>
 		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
