--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div>
+		<div class="profilepic"><img src="static/Images/WhatsApp Image 2021-04-01 at 13.14.43.jpeg"></div>
 		<h1>Can Akbulut</h1>
 		<h2>Databases.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
@@ -54,7 +54,7 @@
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWFx08Yho3yw/profile-displayphoto-shrink_200_200/0/1600698201762?e=1622073600&v=beta&t=R16qqGIFmvCSp2ni9b8rrscbISoJhtfSKcLPJMwP7H0"></div>
+		<div class="profilepic"><img src="static/Images/WhatsApp Image 2021-04-01 at 12.52.17.jpeg"></div>
 		<h1>Alexander Nathanail</h1>
 		<h2>Image gen.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet</h3>
