--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
 
 	<div id="top">
 		<h1>CONTACT.</h1>
-		<h3>You have a question? A suggestion? Feel free to contact us!</h3>
+		<h3>You have a question? A suggestion? Feel free to contact us! We will try to answer as soon as possible.</h3>
 		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
