--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
 
 	<div id="top">
 		<h1>ABOUT.</h1>
-		<h3>This website is a tool build by UCL computer science students. Its aim is to help students all around the world to practice on Automata, which we know tends to be a difficult topic.</h3>
+		<h3>This website is a tool build by  a team of UCL computer science students. Its aim is to help students all around the world to practice on Automata, which we know tends to be a difficult topic.</h3>
 		<div class="sideImage"><img src="static/Images/undraw_about_me_wa29.png"></div>
 	</div>
 
