--- a/templates/create.html
+++ b/templates/create.html
@@ -41,7 +41,7 @@
 
 	<div id="top">
 		<h1>CREATE.</h1>
-		<h3>Create an exercise to help people learn finite state automata.</h3>
+		<h3>Create an exercise to help people learn finite state automata. Use "+" for "|".</h3>
 		 
 	</div>
     <div class="sideImage"><img src={{image|default("static/Images/sample_graph.png",true)}}></div>
