--- a/templates/exercise_template.html
+++ b/templates/exercise_template.html
@@ -42,7 +42,7 @@
 
 	<div id="top">
 		<h1>{{data.title}}</h1>
-		<h3>{{data.description}}</h3>
+		<h3>{{data.description}} Use "+" for "|".</h3>
 		 
 	</div>
     <div class="sideImage"><img src= {{data.image}}></div>
