--- a/templates/generator.html
+++ b/templates/generator.html
@@ -42,7 +42,7 @@
 
 	<div id="top">
 		<h1>GENERATOR.</h1>
-		<h3>Get an NFA from a Regular Expression</h3>
+		<h3>Get an NFA from a Regular Expression. Use "+" for "|".</h3>
 	</div>
     <div class="sideImage"><img src={{image|default("static/Images/undraw_team_spirit_hrr4(2).png", true)}}></div>
     <form action="" method="POST">
